# visual-tracking

src/: CMakeLists.txt  camshift.cpp  crop.cpp  detecting_tracking.cpp  meanshift.cpp  multi_tracking.cpp  my_detector.yml  tracking.cpp  train_HOG.cpp  write-frames.cpp
